# score-manager-backend

./: .env.sample  README.md  main.py  pyproject.toml  requirements.txt
.deta/: prog_info  state
.github/workflows/: deployment.yml
app/: _app.py  app.py  db.py
app/api/: v1.py
app/api/routes/: profile.py
app/auth/: __init__.py  api.py  common.py  constants.py  deps.py  error.py  scheme.py  utils.py
app/core/: config.py
app/models/: responses.py
