[project]
name = ""
version = ""
description = ""
authors = [
    {name = "alan910127", email = ""},
    {name = "y-c-wang", email = ""},
]
dependencies = [
    "fastapi>=0.87.0",
    "uvicorn>=0.20.0",
    "deta>=1.1.0",
    "httpx>=0.23.1",
    "pydantic[dotenv]>=1.10.2",
    "python-multipart>=0.0.5",
]
requires-python = ">=3.7"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]


[tool.pdm.scripts]
dev = "uvicorn main:app --reload"